--- a/index.HTML
+++ b/index.HTML
@@ -76,7 +76,7 @@
 
             </section>
             
-            <section id="VIDEOS" class="videos">
+            <section id="VIDEOS!" class="videos">
                 <h1 class="heading">IT-III</h1>
                 <div class="column">
                     <div class="box">
